--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==2.3.1
+numpy>=1.22.0
 oauthlib==3.3.1
 openpyxl==3.1.5
 overrides==7.7.0
@@ -93,7 +93,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.2.1
 pytz==2025.2
-pywin32==308
 pywinpty==2.0.14
 PyYAML==6.0.2
 pyzmq==26.2.0
