--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,8 @@
       "src": "/(.*)",
       "dest": "return_mgm/wsgi.py"
     }
-  ]
+  ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "return_mgm.settings"
+  }
 }
