--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-Django==5.1.6
-djangorestframework==3.16.0
-pandas==2.3.0
-openpyxl==3.1.5
-PyMuPDF==1.26.3
-python-dotenv==1.1.1
-requests==2.32.3
-httplib2==0.22.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-oauthlib==3.3.1
+Django==4.2.7
+gunicorn==21.2.0
+whitenoise==6.6.0  
 dj-database-url==2.1.0
-psycopg2-binary==2.9.9
