--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 Django==4.2.15
 djangorestframework==3.15.2
-pandas==2.2.2
-openpyxl==3.1.2
-PyMuPDF==1.24.5
-python-dotenv==1.0.1
-requests==2.31.0
-httplib2==0.22.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-oauthlib==3.2.2
-dj-database-url==2.1.0
-psycopg2-binary==2.9.9
+whitenoise
+python-dotenv
+pandas
+numpy
+flask
+openpyxl
+PyMuPDF
+requests
+httplib2
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+oauthlib
