--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,23 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "return_mgm/wsgi.py",
+      "src": "manage.py",
       "use": "@vercel/python",
-      "config": { 
-        "maxLambdaSize": "15mb", 
-        "runtime": "python3.11" 
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles_build"
+        "maxLambdaSize": "50mb",
+        "includeFiles": ["staticfiles_build/**", "templates/**"]
       }
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/staticfiles_build/static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "return_mgm/wsgi.py"
+      "dest": "manage.py"
     }
-  ]
+  ],
+  "buildCommand": "./build_files.sh"
 }
